--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </ul>
     </section>
     <section id="portfolio" class="works">
-      <div class="grid-1 hidegr">
+      <div class="grid-1 hidegr hidegr-1">
         <!-- First card -->
         <div class="work1">
           <img class="work1-img grow" alt="work tonic - canopy" width="590px" height="440px" src="images/job1.png"/>
@@ -164,7 +164,7 @@
           <button type="button" class="see-project poppins">See project</button>
         </div>
       </div>
-      <div class="grid-1b hidegr">
+      <div class="grid-1b hidegr-2">
         <div class="rows"> <!-- Row 1-->
             <div class="photo1">
                 <img class="work1b-img grow" alt="work 1" width="" height="" src="images/job3b.png">
