Edit README, index, CSS & JS files; add modal window and edit window style.

--- a/index.html
+++ b/index.html
@@ -358,6 +358,6 @@
         </form>
     </footer>
     <script src="./js/mobile.js"></script>
-    <script src="./js/popup-window.js"></script>></script>
+    <script src="./js/popup-window.js"></script>
   </body>
 </html>
