Edit Index.tml and add two images for popup window.

--- a/index.html
+++ b/index.html
@@ -357,6 +357,13 @@
           <button type="submit" id="getintouch" class="button3">Get in touch</button>
         </form>
     </footer>
+    <div class="detail-container">
+      <button class="btn-close">
+        <img src="./images/btn-close.svg" alt="" />
+      </button>
+      <div class="detail">
+      </div>
+    </div>
     <script src="./js/mobile.js"></script>
     <script src="./js/popup-window.js"></script>
   </body>
