--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
       </ul>
     </section>
     <section id="portfolio" class="works">
-      <div class="grid-1 hidegr hidegr-1">
+      <!-- <div class="grid-1 hidegr hidegr-1"> -->
         <!-- First card -->
-        <div class="work1">
+        <!-- <div class="work1">
           <img class="work1-img grow" alt="work tonic - canopy" width="590px" height="440px" src="images/job1.png"/>
           <h2 class="work-text1 poppins">Tonic</h2>
           <ul class="flex1">
@@ -86,10 +86,10 @@
             <li><p class="stack poppins">CSS</p></li>
             <li><p class="stack poppins">JavaScript</p></li>
           </ul>
-          <button type="button" class="see-project poppins">See project</button>
-        </div>
+          <button type="button" class="see-project poppins" id="11">See project</button>
+        </div> -->
         <!-- Second card -->
-        <div class="work1">
+        <!-- <div class="work1">
           <img class="work1-img grow" alt="work Multi Post Stories - canopy" width="590px" height="440px" src="images/job2.png"/>
           <h2 class="work-text1 poppins">Multi-Post Stories</h2>
           <ul class="flex1">
@@ -111,10 +111,10 @@
             <li><p class="stack poppins">CSS</p></li>
             <li><p class="stack poppins">JavaScript</p></li>
           </ul>
-          <button type="button" class="see-project poppins">See project</button>
-        </div>
+          <button type="button" class="see-project poppins" id="12">See project</button>
+        </div> -->
         <!-- Third card -->
-        <div class="work1">
+        <!-- <div class="work1">
           <img class="work1-img grow" alt="work tonic - canopy" width="590px" height="440px" src="images/job3.png"/>
           <h2 class="work-text1 poppins">Tonic</h2>
           <ul class="flex1">
@@ -136,10 +136,10 @@
             <li><p class="stack poppins">CSS</p></li>
             <li><p class="stack poppins">JavaScript</p></li>
           </ul>
-          <button type="button" class="see-project poppins">See project</button>
-        </div>
+          <button type="button" class="see-project poppins" id="13">See project</button>
+        </div> -->
         <!-- Fourth card -->
-        <div class="work1">
+        <!-- <div class="work1">
           <img class="work1-img grow" alt="work Multi Post Stories - canopy" width="590px" height="440px" src="images/job4.png"/>
           <h2 class="work-text1 poppins">Multi-Post Stories</h2>
           <ul class="flex1">
@@ -161,12 +161,13 @@
             <li><p class="stack poppins">CSS</p></li>
             <li><p class="stack poppins">JavaScript</p></li>
           </ul>
-          <button type="button" class="see-project poppins">See project</button>
+          <button type="button" class="see-project poppins" id="14">See project</button>
         </div>
-      </div>
-      <div class="grid-1b hidegr-2">
-        <div class="rows"> <!-- Row 1-->
-            <div class="photo1">
+      </div> -->
+
+      <!-- <div class="grid-1b hidegr-2"> -->
+        <!-- <div class="rows"> Row 1 -->
+            <!-- <div class="photo1">
                 <img class="work1b-img grow" alt="work 1" width="" height="" src="images/job3b.png">
             </div>
             <div class="work1b">
@@ -188,9 +189,9 @@
                     <button type="button" class="see-project poppins">See project</button>
                 </nav>
             </div>
-        </div>
-        <div class="rows"> <!-- Row 2-->
-            <div class="work1b">
+        </div> -->
+        <!-- <div class="rows"> Row 2 -->
+            <!-- <div class="work1b">
                 <h2 class="work-text1b poppins">Multi-Post Stories</h2>
                 <ul class="flex1">
                     <li><p class="canopy poppins">FACEBOOK</p></li>
@@ -213,9 +214,9 @@
             <div class="photo2">
                 <img class="work1b-img grow" alt="work 2" width="" height="" src="images/job4b.png">
             </div>
-        </div>
-        <div class="rows"> <!-- Row 3-->
-            <div class="photo1">
+        </div> -->
+        <!-- <div class="rows"> Row 3 -->
+            <!-- <div class="photo1">
                 <img class="work1b-img grow" alt="work 3" width="" height="" src="images/job1b.png">
             </div>
             <div class="work1b">
@@ -238,9 +239,9 @@
                     <button type="button" class="see-project poppins">See project</button>
                 </nav>
             </div>
-        </div>
-        <div class="rows"> <!-- Row 4-->
-            <div class="work1b">
+        </div> -->
+        <!-- <div class="rows"> Row 4 -->
+            <!-- <div class="work1b">
                 <h2 class="work-text1b poppins">Uber navigation</h2>
                 <ul class="flex1">
                     <li><p class="canopy poppins">Uber</p></li>
@@ -263,8 +264,8 @@
             <div class="photo2">
                 <img class="work1b-img grow" alt="work 4" width="" height="" src="images/job2b.png" />
             </div>
-        </div>
-      </div>
+        </div> -->
+      <!-- </div> -->
       <div id="modal">
       </div>
       <div id="grid2">
