Edit files README, index.html, styles.css, popup-window.js, change some images.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
         </li>
       </ul>
     </section>
+    <div class="sep"></div>
     <section id="portfolio" class="works">
+      <h2 class="portfolio-title poppins">Portfolio</h2>
       <div id="modal">
       </div>
       <div id="grid2">
